// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-button-slot-beta #render should render default button 1`] = `
<gux-button-slot-beta accent="secondary">
  <!---->
  <button title="Default" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled default button 1`] = `
<gux-button-slot-beta accent="secondary">
  <!---->
  <button disabled="" title="Default" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled primary button 1`] = `
<gux-button-slot-beta accent="primary">
  <!---->
  <button disabled="" title="Primary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled secondary button 1`] = `
<gux-button-slot-beta accent="secondary">
  <!---->
  <button disabled="" title="Secondary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render disabled tertiary button 1`] = `
<gux-button-slot-beta accent="tertiary">
  <!---->
  <button disabled="" title="Tertiary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render invalid button 1`] = `
<gux-button-slot-beta accent="invalid">
  <!---->
  <button title="Invalid" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render invalid button 2`] = `
<gux-button-slot-beta accent="invalid">
  <!---->
  <button title="Invalid" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render primary button 1`] = `
<gux-button-slot-beta accent="primary">
  <!---->
  <button title="Primary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render secondary button 1`] = `
<gux-button-slot-beta accent="secondary">
  <!---->
  <button title="Secondary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;

exports[`gux-button-slot-beta #render should render tertiary button 1`] = `
<gux-button-slot-beta accent="tertiary">
  <!---->
  <button title="Tertiary" type="button">
    Button
  </button>
</gux-button-slot-beta>
`;
